# 3DRender

./: .gitignore  3DRender.sln  CMakeLists.txt  README.md
3DRender/: 3DRender.vcxproj  3DRender.vcxproj.filters  MyApp.cpp  MyApp.h  glad.c  imgui.ini  main.cpp
3DRender/shaders/: lighting.frag  lighting.vert  myApp.frag  myApp.vert
3DRender/src/: Application.cpp  Application.h  Color.hpp  Data.cpp  Data.h  Object.cpp  Object.h
3DRender/src/BufferObject/: BufferObject.cpp  BufferObject.h  ElementBufferObject.cpp  ElementBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
3DRender/src/Camera/: Camera.cpp  Camera.h
3DRender/src/Device/: Device.cpp  Device.h
3DRender/src/Lighting/: Lighting.cpp  Lighting.h  Material.hpp
3DRender/src/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
3DRender/src/Texture/: Texture.cpp  Texture.h
3DRender/src/VertexObject/: VertexArrayObject.cpp  VertexArrayObject.h  VertexAttribute.cpp  VertexAttribute.h
3DRender/src/Window/: Window.cpp  Window.h
3DRender/x64/Debug/: 3DRender.exe.recipe  3DRender.ilk  stb_image.h.ifc  stb_image.h.ifc.d.json  stb_image.h.module.json  stb_image.h_301CFD835480971.ifc.dt.module.json.command  vc143.idb
3DRender/x64/Debug/3DRender.tlog/: 3DRender.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3DRender/x64/Debug/3DRender_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
Linking/include/glad/: glad.h
libraries/imguiFileLoad/: CMakeLists.txt
libraries/itugl/include/ituGL/renderer/: Renderer.h
libraries/itugl/src/ituGL/asset/: ShaderLoader.cpp  TextureCubemapLoader.cpp
libraries/itugl/src/ituGL/renderer/: Renderer.cpp
src/: BlinnPhongApplication.cpp  BlinnPhongApplication.h  SceneViewerApplication.cpp  SceneViewerApplication.h  main.cpp  nfd.h
src/shaders/: default.frag  default_pbr.frag
